styles.css
/* ... */
.pwc-reference-list {
  padding-bottom: 2rem;
}

.pwc-reference-list__title {
  font-size: var(--pwc-font-size);
  font-weight: bold;
  padding: 0 5px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.pwc-reference-list__title > div {
  display: flex;
  align-items: center;
  gap: var(--size-4-1);
}

.pwc-reference-list__count {
  color: var(--text-muted);
  display: flex;
  padding: var(--size-4-1) var(--size-4-2);
  border-radius: var(--tag-radius);
  background-color: rgba(var(--mono-rgb-100), 0.05);
  font-weight: var(--font-normal);
  line-height: 1;
  font-size: var(--font-ui-smaller);
}

.pwc-reference-list__unresolved-count {
  color: var(--text-on-accent);
  display: flex;
  padding: var(--size-4-1) var(--size-4-2);
  border-radius: var(--tag-radius);
  background-color: var(--text-error);
  font-weight: var(--font-normal);
  line-height: 1;
  font-size: var(--font-ui-smaller);
}

.pwc-no-content {
  font-size: var(--pwc-font-size);
  padding: 0 5px;
  color: var(--text-muted);
}

.csl-entry-wrapper {
  --icon-size: var(--icon-s);
  --icon-stroke: var(--icon-s-stroke-width);

  display: flex;
  padding: 1em 5px;
  gap: var(--size-4-2);
}

.pwc-tooltip .csl-entry-wrapper {
  padding: 0;
}

.csl-entry {
  font-size: var(--pwc-font-size);
  word-wrap: break-word;
  gap: var(--size-4-2);
}

.csl-entry:has(> div + div) {
  display: flex;
}

.pwc-reference-list .csl-entry-wrapper:not(:last-child) {
  border-bottom: 1px solid var(--background-modifier-border);
}

.pwc-entry-btns {
  display: flex;
  flex-direction: column;
  gap: var(--size-4-1);
}

.pwc-conflict-icon {
  color: var(--color-yellow);
  opacity: 0.8;
}

.pwc-reference-list a.footnote-ref {
  vertical-align: super;
}

.pwc-reference-list em,
.pwc-reference-list em em em,
.pwc-reference-list em em em em em {
  font-style: italic;
}

.pwc-reference-list em em,
.pwc-reference-list em em em em {
  font-style: normal;
}
.pwc-reference-list code {
  white-space: pre-wrap;
}

.pwc-reference-list span.smallcaps {
  font-variant: small-caps;
}

.pwc-reference-list span.underline {
  text-decoration: underline;
}

.pwc-reference-list q {
  quotes: '“' '”' '‘' '’';
}

.pwc-reference-list div.column {
  display: inline-block;
  vertical-align: top;
  width: 50%;
}

.pwc-tooltip.collapsed-links a,
.pwc-reference-list.collapsed-links a {
  font-size: 0;
}

.pwc-tooltip.collapsed-links a::after,
.pwc-reference-list.collapsed-links a::after {
  font-size: var(--pwc-font-size);
  content: ' ';
  display: inline-block;
  width: 1em;
  height: 1em;

  background-color: var(--text-accent);

  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath d='M8.465 11.293c1.133-1.133 3.109-1.133 4.242 0l.707.707 1.414-1.414-.707-.707c-.943-.944-2.199-1.465-3.535-1.465s-2.592.521-3.535 1.465L4.929 12a5.008 5.008 0 0 0 0 7.071 4.983 4.983 0 0 0 3.535 1.462A4.982 4.982 0 0 0 12 19.071l.707-.707-1.414-1.414-.707.707a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.122-2.121z'%3E%3C/path%3E%3Cpath d='m12 4.929-.707.707 1.414 1.414.707-.707a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.122 2.121c-1.133 1.133-3.109 1.133-4.242 0L10.586 12l-1.414 1.414.707.707c.943.944 2.199 1.465 3.535 1.465s2.592-.521 3.535-1.465L19.071 12a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0z'%3E%3C/path%3E%3C/svg%3E");
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath d='M8.465 11.293c1.133-1.133 3.109-1.133 4.242 0l.707.707 1.414-1.414-.707-.707c-.943-.944-2.199-1.465-3.535-1.465s-2.592.521-3.535 1.465L4.929 12a5.008 5.008 0 0 0 0 7.071 4.983 4.983 0 0 0 3.535 1.462A4.982 4.982 0 0 0 12 19.071l.707-.707-1.414-1.414-.707.707a3.007 3.007 0 0 1-4.243 0 3.005 3.005 0 0 1 0-4.243l2.122-2.121z'%3E%3C/path%3E%3Cpath d='m12 4.929-.707.707 1.414 1.414.707-.707a3.007 3.007 0 0 1 4.243 0 3.005 3.005 0 0 1 0 4.243l-2.122 2.121c-1.133 1.133-3.109 1.133-4.242 0L10.586 12l-1.414 1.414.707.707c.943.944 2.199 1.465 3.535 1.465s2.592-.521 3.535-1.465L19.071 12a5.008 5.008 0 0 0 0-7.071 5.006 5.006 0 0 0-7.071 0z'%3E%3C/path%3E%3C/svg%3E");
}

.pwc-tooltip {
  word-wrap: break-word;
  position: fixed;
  font-family: var(--font-interface);
  font-size: var(--pwc-tooltip-font-size);
  padding: 10px;
  background-color: var(--background-primary);
  border: 1px solid var(--background-modifier-border);
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  border-radius: 6px;
  width: 95vw;
  max-width: 300px;
  line-height: 1.4;
  z-index: var(--layer-popover);
  overflow: hidden;
  display: flex;
  flex-direction: column;
  gap: var(--size-4-2);
  user-select: text;
}

.pwc-tooltip .csl-entry {
  padding: 0;
}

.pwc-decorations .cm-hmd-barelink {
  text-decoration: none;
}

.pwc-decorations
  :not(a, .cm-hmd-internal-link, .cm-link-alias)
  > :is(.pandoc-citation, .at).is-resolved:not(.is-link) {
  color: var(--pwc-citation-color);
}

.pwc-decorations
  :not(.cm-formatting-link)
  > .cm-pandoc-citation-formatting:not(.at) {
  color: var(--pwc-citation-formatting-color);
}

.pwc-decorations
  :not(.cm-hmd-internal-link, .cm-link-alias)
  > .cm-pandoc-citation-extra {
  color: var(--pwc-citation-extra-color);
}

.pwc-decorations
  :not(.cm-link-alias)
  > :is(.pandoc-citation, .at).is-resolved:not(.is-link) {
  text-decoration-line: underline;
  text-decoration-style: var(--pwc-citation-underline-style);
  text-decoration-thickness: 2px;
  text-decoration-color: var(--pwc-citation-underline-color);
}

.pwc-decorations
  :not(.cm-hmd-internal-link, .cm-link-alias)
  > :is(.pandoc-citation, .at).is-unresolved {
  color: var(--pwc-citation-color-missing);
  text-decoration-color: var(--pwc-citation-underline-color-missing);
  opacity: 1;
}
/* ... */

